--- a/src/styles/products.css
+++ b/src/styles/products.css
@@ -687,7 +687,7 @@
 }
 
 .create-form__row--3 {
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
 }
 
 .create-form__field {
